# LinCaster

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
configs/: config.json
contrib/: 51-rodecaster-rename.conf  99-rodecaster.rules  lincaster.desktop  lincaster.service
crates/lincaster/: Cargo.toml
crates/lincaster-proto/: Cargo.toml
crates/lincaster-proto/src/: config.rs  error.rs  hid.rs  lib.rs  state_dump.rs  storage.rs
crates/lincaster/src/: cli_exec.rs  dbus_client.rs  main.rs  routing_view.rs  sound_pad_view.rs
crates/lincasterctl/: Cargo.toml
crates/lincasterctl/src/: main.rs
crates/lincasterd/: Cargo.toml
crates/lincasterd/src/: app_mapper.rs  dbus_service.rs  device_discovery.rs  fader_control.rs  graph_manager.rs  main.rs  pipewire_registry.rs  pw_exec.rs  state.rs  usb_hid.rs
docs/: ARCHITECTURE.md  USB_PROTOCOL.md
