[package]
name = "lincasterctl"
description = "CLI tool for controlling the LinCaster daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "lincasterctl"
path = "src/main.rs"

[dependencies]
lincaster-proto = { path = "../lincaster-proto" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dbus = "0.9"
pipewire = "0.9"
